--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "asciichart": "^1.5.25",
     "ccxt": "^1.61.16",
     "delay": "^5.0.0",
     "dotenv": "^10.0.0",
-    "fs": "^0.0.1-security",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "node-telegram-bot-api": "^0.57.0"
   }
 }
